--- a/index.html
+++ b/index.html
@@ -19,54 +19,54 @@
             <div class="profile__info">
               <div class="profile__name-edit">
                 <h1 class="profile__name">Жак-Ив Кусто</h1>
-                <button type="button" class="button__edit"></button>
+                <button type="button" class="profile__edit-button"></button>
               </div>
               <p class="profile__job">Исследователь океана</p>
             </div>
           </div>
-          <button type="button" class="button__add"></button>
+          <button type="button" class="profile__add-button"></button>
         </section>
         <section class="elements container">
           <div class="card">
             <img class="card__image" src="images/Karachaevsk.jpg" alt="Карачаевск" />
             <div class="card__block">
               <p class="card__title">Карачаевск</p>
-              <button type="button" class="button__like button__like_active"></button>
+              <button type="button" class="card__like-button card__like-button_active"></button>
             </div>
           </div>
           <div class="card">
             <img class="card__image" src="images/Elbrus.jpg" alt="Эльбрус" />
             <div class="card__block">
               <p class="card__title">Гора Эльбрус</p>
-              <button type="button" class="button__like button__like_active"></button>
+              <button type="button" class="card__like-button card__like-button_active"></button>
             </div>
           </div>
           <div class="card">
             <img class="card__image" src="images/Dombay.jpg" alt="Домбай" />
             <div class="card__block">
               <p class="card__title">Домбай</p>
-              <button type="button" class="button__like button__like_active"></button>
+              <button type="button" class="card__like-button card__like-button_active"></button>
             </div>
           </div>
           <div class="card">
             <img class="card__image" src="images/kurshskya-kosa.jpg" alt="Куршская коса" />
             <div class="card__block">
               <p class="card__title">Куршская коса</p>
-              <button type="button" class="button__like button__like_active"></button>
+              <button type="button" class="card__like-button card__like-button_active"></button>
             </div>
           </div>
           <div class="card">
             <img class="card__image" src="images/Baikal.jpg" alt="Байкал" />
             <div class="card__block">
               <p class="card__title">Байкал</p>
-              <button type="button" class="button__like button__like_active"></button>
+              <button type="button" class="card__like-button card__like-button_active"></button>
             </div>
           </div>
           <div class="card">
             <img class="card__image" src="images/Altai.jpg" alt="Алтай" />
             <div class="card__block">
               <p class="card__title">Алтай</p>
-              <button type="button" class="button__like button__like_active"></button>
+              <button type="button" class="card__like-button card__like-button_active"></button>
             </div>
           </div>
         </section>
@@ -77,14 +77,14 @@
     </div>
     <div class="popup">
       <div class="popup__container">
-        <button type="button" class="button__close"></button>
+        <button type="button" class="popup__close-button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__data">
           <fieldset class="popup__user">
             <input type="text" class="popup__name" value="" />
             <input type="text" class="popup__job" value="" />
           </fieldset>
-          <input type="submit" class="button__save" value="Сохранить" />
+          <input type="submit" class="popup__save-button" value="Сохранить" />
         </form>
       </div>
     </div>
