--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
       <div class="popup__container">
         <button type="button" class="popup__close-button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__data" name="popup__data">
-            <input type="text" class="popup__form popup__name" name="profileName" value="Жак-Ив Кусто" />
-            <input type="text" class="popup__form popup__job" name="profileJob" value="Исследователь океана" />
+        <form class="popup__data" name="popup-data">
+            <input type="text" class="popup__form popup__form_type_name" name="profileName" value="Жак-Ив Кусто" />
+            <input type="text" class="popup__form popup__form_type_job" name="profileJob" value="Исследователь океана" />
           <button type="submit" class="popup__save-button">Сохранить</button>
         </form>
       </div>
