refactor: form name

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         <button type="button" class="popup__close-button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__data" name="popup-data">
-            <input type="text" class="popup__form popup__form_type_name" name="profileName" value="Жак-Ив Кусто" />
-            <input type="text" class="popup__form popup__form_type_job" name="profileJob" value="Исследователь океана" />
+            <input type="text" class="popup__form popup__form_type_name" name="profile-name" value="Жак-Ив Кусто" />
+            <input type="text" class="popup__form popup__form_type_job" name="profile-job" value="Исследователь океана" />
           <button type="submit" class="popup__save-button">Сохранить</button>
         </form>
       </div>
