--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <button type="button" class="profile__add-button"></button>
         </section>
         <section class="cards container">
-          <ul class="card__list">
+          <ul class="cards__list">
           </ul>
         </section>
       </main>
@@ -35,7 +35,7 @@
         <p class="footer__text">© 2021 Mesto Russia</p>
       </footer>
     </div>
-    <div class="popup popup__edit">
+    <div class="popup open-edit-popup">
       <div class="popup__container">
         <button type="button" class="popup__close-button"></button>
         <form class="popup__data" name="popup-edit">
@@ -46,7 +46,7 @@
         </form>
       </div>
     </div>
-    <div class="popup popup__add">
+    <div class="popup open-add-popup">
       <div class="popup__container">
         <button type="button" class="popup__close-button"></button>
         <form class="popup__data" name="popup-add">
@@ -57,10 +57,10 @@
         </form>
       </div>
     </div>
-    <div class="popup popup__fullscreen">
+    <div class="popup open-fullscreen-popup">
         <figure class="fullscreen">
           <button type="button" class="popup__close-button"></button>
-          <img class="fullscreen__image" alt="" src="#">
+          <img class="fullscreen__image" alt="#" src="#">
           <figcaption class="fullscreen__caption"></figcaption>
         </figure>
       </div>
