--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p class="footer__text">© 2021 Mesto Russia</p>
       </footer>
     </div>
-    <div class="popup open-edit-popup">
+    <div class="popup popup_type_profile">
       <div class="popup__container">
         <button type="button" class="popup__close-button"></button>
         <form class="popup__data" name="popup-edit">
@@ -46,7 +46,7 @@
         </form>
       </div>
     </div>
-    <div class="popup open-add-popup">
+    <div class="popup popup_type_card-add">
       <div class="popup__container">
         <button type="button" class="popup__close-button"></button>
         <form class="popup__data" name="popup-add">
@@ -57,7 +57,7 @@
         </form>
       </div>
     </div>
-    <div class="popup open-fullscreen-popup">
+    <div class="popup popup_type_image">
         <figure class="fullscreen">
           <button type="button" class="popup__close-button"></button>
           <img class="fullscreen__image" alt="#" src="#">
@@ -74,6 +74,7 @@
         </div>
       </li>
     </template>
+    <script src="scripts/initial-cards.js"></script>
     <script src="scripts/script.js"></script>
   </body>
 </html>
