--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
     <div class="popup popup_type_profile">
       <div class="popup__container">
         <button type="button" class="popup__close-button"></button>
-        <form class="popup__data" name="popup-edit">
+        <form class="popup__form" name="popup-edit" novalidate>
           <h2 class="popup__title">Редактировать профиль</h2>
-            <input type="text" class="popup__form popup__form_type_name" name="profile-name" value="Жак-Ив Кусто" />
-            <input type="text" class="popup__form popup__form_type_job" name="profile-job" value="Исследователь океана" />
+            <input type="text" id="name" minlength="2" maxlength="40" class="popup__input popup__form_type_name" name="profile-name" placeholder="Имя" value="Жак-Ив Кусто" autocomplete="off" required>
+            <span class="popup__input-error" id="name-error"></span>
+            <input type="text" id="job" maxlength="200" minlength="2" class="popup__input popup__form_type_job" name="profile-job" placeholder="О себе" value="Исследователь океана" autocomplete="off" required>
+            <span class="popup__input-error" id="job-error"></span>
           <button type="submit" class="popup__save-button">Сохранить</button>
         </form>
       </div>
@@ -49,10 +51,12 @@
     <div class="popup popup_type_card-add">
       <div class="popup__container">
         <button type="button" class="popup__close-button"></button>
-        <form class="popup__data" name="popup-add">
+        <form class="popup__form" name="popup-add" novalidate>
           <h2 class="popup__title">Новое место</h2>
-            <input type="text" class="popup__form popup__form_type_title" name="profile-title" placeholder="Название" />
-            <input type="url" class="popup__form popup__form_type_link" name="profile-link" placeholder="Ссылка" />
+            <input type="text" id="title" minlength="2" maxlength="30" class="popup__input popup__form_type_title" name="profile-title" placeholder="Название" autocomplete="off" required>
+            <span class="popup__input-error" id="title-error"></span>
+            <input type="url" id="url" class="popup__input popup__form_type_link" name="profile-link" placeholder="Ссылка" autocomplete="off" required>
+            <span class="popup__input-error" id="url-error"></span>
           <button type="submit" class="popup__save-button">Сохранить</button>
         </form>
       </div>
@@ -75,6 +79,7 @@
       </li>
     </template>
     <script src="scripts/initial-cards.js"></script>
+    <script src="scripts/validate.js"></script>
     <script src="scripts/script.js"></script>
   </body>
 </html>
