--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
         </div>
       </li>
     </template>
-    <script src="scripts/initial-cards.js"></script>
-    <script src="scripts/validate.js"></script>
-    <script src="scripts/script.js"></script>
+    <script type="module" src="scripts/FormValidator.js"></script>
+    <script type="module" src="scripts/script.js"></script>
   </body>
 </html>
