fix: transfer const

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="popup popup_type_card-add">
       <div class="popup__container">
         <button type="button" class="popup__close-button"></button>
-        <form class="popup__form" name="popup-add" novalidate>
+        <form class="popup__form" name="popup-add" id="popup-add" novalidate>
           <h2 class="popup__title">Новое место</h2>
             <input type="text" id="title" minlength="2" maxlength="30" class="popup__input popup__input-title" name="profile-title" placeholder="Название" autocomplete="off" required>
             <span class="popup__input-error" id="title-error"></span>
