--- a/index.html
+++ b/index.html
@@ -78,6 +78,6 @@
         </div>
       </li>
     </template>
-    <script type="module" src="scripts/script.js"></script>
+    <script type="module" src="./pages/index.js"></script>
   </body>
 </html>
