--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
     <div class="popup popup_type_profile">
       <div class="popup__container">
         <button type="button" class="popup__close-button"></button>
-        <form class="popup__form" name="popup-edit" novalidate>
+        <form class="popup__form" name="popup-edit" id="popup-edit" novalidate>
           <h2 class="popup__title">Редактировать профиль</h2>
-            <input type="text" id="name" minlength="2" maxlength="40" class="popup__input popup__input-name" name="profile-name" placeholder="Имя" value="Жак-Ив Кусто" autocomplete="off" required>
+            <input type="text" id="name" minlength="2" maxlength="40" class="popup__input popup__input-name" name="name" placeholder="Имя" value="Жак-Ив Кусто" autocomplete="off" required>
             <span class="popup__input-error" id="name-error"></span>
-            <input type="text" id="job" maxlength="200" minlength="2" class="popup__input popup__input-job" name="profile-job" placeholder="О себе" value="Исследователь океана" autocomplete="off" required>
+            <input type="text" id="job" maxlength="200" minlength="2" class="popup__input popup__input-job" name="job" placeholder="О себе" value="Исследователь океана" autocomplete="off" required>
             <span class="popup__input-error" id="job-error"></span>
           <button type="submit" class="popup__save-button">Сохранить</button>
         </form>
@@ -53,9 +53,9 @@
         <button type="button" class="popup__close-button"></button>
         <form class="popup__form" name="popup-add" id="popup-add" novalidate>
           <h2 class="popup__title">Новое место</h2>
-            <input type="text" id="title" minlength="2" maxlength="30" class="popup__input popup__input-title" name="profile-title" placeholder="Название" autocomplete="off" required>
+            <input type="text" id="title" minlength="2" maxlength="30" class="popup__input popup__input-title" name="cardTitle" placeholder="Название" autocomplete="off" required>
             <span class="popup__input-error" id="title-error"></span>
-            <input type="url" id="url" class="popup__input popup__input-link" name="profile-link" placeholder="Ссылка" autocomplete="off" required>
+            <input type="url" id="url" class="popup__input popup__input-link" name="cardLink" placeholder="Ссылка" autocomplete="off" required>
             <span class="popup__input-error" id="url-error"></span>
           <button type="submit" class="popup__save-button">Сохранить</button>
         </form>
