--- a/src/index.html
+++ b/src/index.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="pages/index.css" />
     <title>Mesto</title>
   </head>
   <body class="body">
     <div class="page">
       <header class="header container">
-        <img class="header__logo" src="images/logo.svg" alt="логотип-место" />
+        <img class="header__logo" src="<%=require('./images/logo.svg')%>" alt="логотип-место" />
       </header>
       <main>
         <section class="profile container">
           <div class="profile__box">
-            <img class="profile__avatar" src="images/Jacques.jpg" alt="Жак-Ив Кусто" />
+            <img class="profile__avatar" src="<%=require('./images/Jacques.jpg')%>" alt="Жак-Ив Кусто" />
             <div class="profile__info">
               <div class="profile__name-edit">
                 <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -78,6 +77,5 @@
         </div>
       </li>
     </template>
-    <script type="module" src="./pages/index.js"></script>
   </body>
 </html>
