refactor: new profile container size

--- a/src/index.html
+++ b/src/index.html
@@ -13,17 +13,19 @@
       </header>
       <main>
         <section class="profile container">
-          <div class="profile__box">
-            <button class="profile__avatar-edit" type="button"></button>
-            <img class="profile__avatar" src="#" alt="аватар" />
-          </div>  
-            <div class="profile__info">
-              <div class="profile__name-edit">
-                <h1 class="profile__name">Жак-Ив Кусто</h1>
-                <button type="button" class="profile__edit-button"></button>
+          <div class="profile__data">
+            <div class="profile__box">
+              <button class="profile__avatar-edit" type="button"></button>
+              <img class="profile__avatar" src="#" alt="аватар" />
+            </div>  
+              <div class="profile__info">
+                <div class="profile__name-edit">
+                  <h1 class="profile__name">Жак-Ив Кусто</h1>
+                  <button type="button" class="profile__edit-button"></button>
+                </div>
+                <p class="profile__job">Исследователь океана</p>
               </div>
-              <p class="profile__job">Исследователь океана</p>
-            </div>
+          </div>
           <button type="button" class="profile__add-button"></button>
         </section>
         <section class="cards container">
